# Grimr

./: .gitignore  Cargo.toml  README.md  accessions.txt  generate_test_fasta.py
correctness_test/: F0t.fa  F1.fa  F1t.fa  F2.fa  F2t.fa  F3.fa  F3t.fa  F4.fa  F4t.fa  F5.fa  F5t.fa  F6.fa  F6t.fa  F7.fa  F7t.fa  F8.fa  expected_1.fa  expected_10.fa  expected_11.fa  expected_12.fa  expected_13.fa  expected_14.fa  expected_15.fa  expected_1t.fa  expected_2.fa  expected_2t.fa  expected_3.fa  expected_3t.fa  expected_4.fa  expected_4t.fa  expected_5.fa  expected_6.fa  expected_7.fa  expected_8.fa  expected_9.fa  expected_9t.fa  fof.txt  foft.txt  generate_test_fasta.py  query1.txt  (+15 more)
src/: benchmark.rs  label_editor.py  lib.rs  main.rs  query_builder.py  utils.rs
test_files/: 0.cbl  fof.txt  foftt.txt  input_florian.txt  metadata.csv  query.txt  query2.txt  test1.fa  test2.fa  test3.fa  test4.fa  test5.fa  test6.fa
