[package]
name = "anti_reindeer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbl = { git = 'https://github.com/imartayan/CBL.git' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
needletail = "0.5"
csv = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

